--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "yunusbulut.me"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "yunusbulutt.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
